# Parallel-Image-Filtering-System

./: CMakeLists.txt  README.md
clients/client/: .clang-tidy  CMakeLists.txt  STRUCTURA_CLIENT.txt  client.c  client.cfg  client.h  config.c  config.h  main.c
clients/tcp_client/: CMakeLists.txt  tcp_client.c
server/: .clang-tidy  CMakeLists.txt  admin.c  dataTypes.h  pif.h  pif.wsdl  processing.c  processing.h  readme.txt  server.c  tcp_server.c  unix_server.c
